.tmux.conf: Add some stuff.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,9 @@ set -g default-shell /bin/bash
 # 起動後のコマンド
 #set -g default-command "tmux >/dev/null 2>&1; if [ $(uname) = Darwin ]; then reattach-to-user-namespace -l /bin/zsh; else /bin/zsh; fi"
 
+# ファイルリロード
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
 # メッセージ表示
 set -g message-fg "white"
 set -g message-bg "colour30"
@@ -32,7 +35,7 @@ set -g status-right-length 80
 set -g status-justify "left"
 set -g status-fg "white"
 set -g status-bg "colour250"
-set -g status-left "#[bg=colour30] HOST #[fg=colour30, bg=default]⮀"
+set -g status-left "#[bg=colour30] #H #[fg=colour30, bg=default]⮀"
 set -g status-right "#[fg=colour238][ %Y/%m/%d %H:%M ]"
 
 # ウィンドウタイトル
@@ -61,8 +64,8 @@ unbind R
 bind R source-file "$HOME/.tmuxrc"
 
 # 再描画
-unbind r
-bind r refresh-client
+# unbind r
+# bind r refresh-client
 
 # 次のウィンドウへ
 unbind C-n
@@ -80,5 +83,21 @@ bind -r p previous-window
 bind -r Tab last-window
 bind -r C-z last-window
 
+# ウィンドウの分割
+bind | split-window -h
+bind - split-window -v
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
 # 参考
 #  * 2013/10/06 https://github.com/raomito/dotfiles/blob/master/tmux/.tmuxrc
+#  * 2013/10/06 http://qiita.com/tt_yamaguchi/items/682940d558e4a5022898 (参考にしたい)
+#  * 2013/10/06 https://github.com/hmans/homedir/blob/master/.tmux.conf
