.tmux.conf: modify looks like my .screenrc settings.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -67,11 +67,19 @@ bind R source-file "$HOME/.tmuxrc"
 # unbind r
 # bind r refresh-client
 
+# ウィンドウを作成
+unbind C-c
+bind -r C-c new-window
+
 # 次のウィンドウへ
 unbind C-n
 bind -r C-n next-window
 unbind n
 bind -r n next-window
+unbind Space
+bind -r Space next-window
+unbind C-Space
+bind -r C-Space next-window
 
 # 前のウィンドウへ
 unbind C-p
@@ -81,7 +89,7 @@ bind -r p previous-window
 
 # 直前に選択したウィンドウへ
 bind -r Tab last-window
-bind -r C-z last-window
+#bind -r C-z last-window
 
 # ウィンドウの分割
 bind | split-window -h
