--- a/.tmux.conf
+++ b/.tmux.conf
@@ -94,6 +94,7 @@ bind -r Tab last-window
 # ウィンドウの分割
 bind | split-window -h
 bind - split-window -v
+# もともとは % と " で縦横分割できるけど直感的なキーに割り当てる
 
 bind h select-pane -L
 bind j select-pane -D
