--- a/.gitconfig
+++ b/.gitconfig
@@ -10,6 +10,7 @@
 	st = status
 	ci = commit
 	co = checkout
+	pco = !git checkout $(git branch | perl -pe 's/^..//' | peco)
 
 	### funny view
         graph  = log --graph --date-order --all --pretty=format:'%h %Cred%d %Cgreen%ad %Cblue%cn %Creset%s' --date=short
