--- a/.gitconfig
+++ b/.gitconfig
@@ -12,6 +12,10 @@
 	co = checkout
 	cop = !git checkout $(git branch --all | perl -pe 's/^..//, s/ .*//, s!^remotes/origin/!!' | sort | uniq | peco)
 
+	### branch
+	# see: https://qiita.com/upinetree/items/0b74b08b64442f0a89b9
+	parent-branch = !git show-branch | grep -F '*' | grep -v "$(git rev-parse --abbrev-ref HEAD)" | head -1 | awk -F'[]~^[]' '{print $2}'
+
 	### funny view
         graph  = log --graph --date-order --all --pretty=format:'%h %Cred%d %Cgreen%ad %Cblue%cn %Creset%s' --date=short
         today  = log --oneline --since='12 hour ago'
