add git subcommand: ra (imply: remote -v)"
"ra" is analogy of "ba".
Natural definition is "rv", but "rv" may cause confusion from "mv", "rm"

--- a/.gitconfig
+++ b/.gitconfig
@@ -14,6 +14,7 @@
 	cop = !git checkout $(git branch --all | perl -pe 's/^..//, s/ .*//, s!^remotes/origin/!!' | sort | uniq | peco)
 	a  = add
 	ba = branch -a
+	ra = remote -v
 
 	### branch management
 	# see: https://qiita.com/upinetree/items/0b74b08b64442f0a89b9
