add git subcommands: ds (diff --cached), dn (diff --name-only)

--- a/.gitconfig
+++ b/.gitconfig
@@ -34,7 +34,9 @@
 	diffns = diff --name-only --cached
 	df = diff
 	dfs = diff --cached
+	ds = diff --cached
 	dfn = diff --name-only
+	dn = diff --name-only
 
 	### reset methods
 	cancel      = reset --soft HEAD^
