--- a/.gitconfig
+++ b/.gitconfig
@@ -53,6 +53,9 @@
 	dfn = diff --name-only
 	dn = diff --name-only
 
+	sjisdiff = !git diff --color=always | piconv -f shiftjis -t utf8
+	eucjpdiff = !git diff --color=always | piconv -f euc-jp -t utf8
+
 	### reset methods
 	cancel      = reset --soft HEAD^
 	reset-merge = reset --merge
